--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-native-community/async-storage": "^1.6.2",
     "axios": "^0.19.0",
     "babel-plugin-root-import": "^6.4.1",
-    "firebase": "^7.2.1",
     "image-picker": "^0.3.1",
     "immer": "^4.0.0",
     "prettier": "^1.18.2",
@@ -30,6 +29,8 @@
     "react-native-text-input-mask": "^1.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.2",
+    "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "reactotron-react-native": "^4.0.2",
