--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'ole' do
 
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'oleTests' do
     inherit! :search_paths
     # Pods for testing
