--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "reactotron-redux-saga": "^4.2.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.1",
+    "rn-fetch-blob": "^0.11.2",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
